# model_search

./: .gitignore  CLAUDE.md  README.org  config.py  dataset.py  energy.py  grid_search.py  log_gpu_utilization.py  logs.py  lr_tune.py  main.py  model.py  prune_model.py  pyproject.toml  run_parallel_tune.sh  start_dashboard.sh  tensorboard_utils.py  test_evd_model.py  train.py  tune.py  utils.py  validate_model.py  verify_study.py  visualize.py  visualize_activations.py  watch_train.sh
configs/: force.yaml  hgf_model_structure.yaml  hgf_model_structure_01.csv  sfd.yaml
docs/: codebase_guide.md  index.md  prune_model_plan.md  research_overview.md  retrain_study.md  test_evd_model_design.md  visualize_activations_design.md  workflow.md
retrain-study/: 01 create_models.sh  02 compute_energy_mae.sh  02 compute_energy_mae_all.sh  03 collect_summary.sh  04 create_plot.py  05 scaling_plot.py  energy_mae.sh
scripts/: 00 sample.ipynb  01 visualize.ipynb  02 tuning_optimizer.ipynb  03 tuning_initialization.ipynb  04 tuning_network_01.ipynb  04 tuning_network_02.ipynb  04 tuning_network_03.ipynb  11-01 Fix F01 Dataset.ipynb  11-02 Viz F02.ipynb  11-02 Viz F03.ipynb  12 NCSN.ipynb  README.org  Sample.py  visualize.py
