[project]
name = "model-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-lsp-server>=1.12.2",
    "h5py>=3.13.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "pyrallis>=0.3.1",
    "optuna>=4.3.0",
    "pathlib>=1.0.1",
    "optuna-dashboard>=0.18.0",
]
