[project]
name = "model-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.13.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "pyrallis>=0.3.1",
    "optuna>=4.3.0",
    "pathlib>=1.0.1",
    "optuna-dashboard>=0.18.0",
    "jupytext>=1.17.1",
    "seaborn>=0.13.2",
    "pyright>=1.1.401",
    "tensorboard>=2.19.0",
    "nvidia-ml-py3>=7.352.0",
    "psycopg2-binary>=2.9.10",
    "wandb>=0.24.2",
]
